[UI/UX] Fixed a responsive design issue with displaying wide HTML messages on narrow displays.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -1591,6 +1591,9 @@ LABEL.error {
   vertical-align: top;
 }
 
+DIV.emailBodyHtml {
+  overflow-x: scroll;
+}
 DIV.emailBodyHtml A {
   color: initial;
 }
